@@ -1,0 +1,1 @@
+--max_connections=1026 --innodb_thread_concurrency=0 --innodb_file_per_table
